get companies list

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
             {
                 "extensions": [".js"]
             }
-        ]
+        ],
+        "react/prop-types": 0
     },
     "settings": {
         "import/resolver": {
