--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,9 @@
                 "extensions": [".js"]
             }
         ],
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
+        "jsx-a11y/no-static-element-interactions": 0
     },
     "settings": {
         "import/resolver": {
